Build with minimum JDK 17