@@ -1,28 +1,3 @@
-/*
- * #%L
- * lolcat4j
- * %%
- * Copyright (C) 2016 James Netherton
- * %%
- * Permission is hereby granted, free of charge, to any person obtaining a copy
- * of this software and associated documentation files (the "Software"), to deal
- * in the Software without restriction, including without limitation the rights
- * to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
- * copies of the Software, and to permit persons to whom the Software is
- * furnished to do so, subject to the following conditions:
- * 
- * The above copyright notice and this permission notice shall be included in
- * all copies or substantial portions of the Software.
- * 
- * THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
- * IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
- * FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
- * AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
- * LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
- * OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
- * THE SOFTWARE.
- * #L%
- */
 package com.github.jamesnetherton.lolcat4j.internal.console;
 
 import com.github.jamesnetherton.lolcat4j.Lol;
@@ -33,7 +8,7 @@ import org.junit.jupiter.api.Test;
 import java.io.PrintStream;
 import java.net.URI;
 import java.nio.file.Files;
-import java.nio.file.Paths;
+import java.nio.file.Path;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
 
@@ -123,7 +98,7 @@ public class ConsolePainterTest {
 
 
     private ConsolePainter createPainter(PrintStream printStream, Lol lol) {
-        ConsolePrinter printer = new ConsolePrinter(printStream);
+        ConsolePrinter printer = new ConsolePrinter(printStream, true);
         if (lol.isAnimate()) {
             return new AnimatedConsolePainter(printer);
         }
@@ -132,6 +107,6 @@ public class ConsolePainterTest {
 
     private String readFile(String fileName) throws Exception {
         URI uri = getClass().getResource(fileName).toURI();
-        return new String(Files.readAllBytes(Paths.get(uri)));
+        return Files.readString(Path.of(uri));
     }
 }
